# morphing

./: LICENSE  README.md
code/sphere_morph/: counter_example_playground.py  main.py  test_edge_triangulation.py
code/sphere_morph/counter_example_search/: __init__.py  bad_example_builder.py  counter_example_producer.py
code/sphere_morph/polyhedron_repr/: __init__.py  dart.py  polyhedron.py  schonhardt_polyhedra.py  vertex.py
code/sphere_morph/sphere_repr/: __init__.py  sphere_embedding.py
code/sphere_morph/sphere_triangulation/: __init__.py  edge_triangulation.py
cpp/: CMakeLists.txt  glp3r_morph_step.cpp  glp3r_morph_step.h  hemisphere_morph_step.cpp  hemisphere_morph_step.h  linear_program.cpp  linear_program.hpp  longitudinal_morph_step.cpp  longitudinal_morph_step.h  main.cpp  morph.cpp  morph.h  morph_step.h  morph_visualizer.cpp  morph_visualizer.h  polyhedron.cpp  polyhedron.h  primitives.cpp  primitives.h  sphere_embedding.cpp  sphere_embedding.h
sphere-morphing/: index.html
